syntax = "proto3";
package pb;
option go_package = "github.com/phatbb/userinfo/userinfo";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


service UserService {
  rpc FindUserById(GetInfoRequestId) returns (User){
    option (google.api.http) = {
      post: "/api/v1/userinfo/get_user_by_id"
      body: "*"
    };

  };
  rpc FindUserByEmail(GetInfoRequestGmail) returns (User){
    option (google.api.http) = {
      post: "/api/v1/userinfo/get_user_by_email"
      body: "*"
    };

  };
  rpc GetUserWalletInfo(GetInfoRequestGmail) returns (Wallet){
    option (google.api.http) = {
      post: "/api/v1/userinfo/get_wallet"
      body: "*"
    };

  };

}



message User {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string role = 4;
    google.protobuf.Timestamp password_changed_at = 5;
    google.protobuf.Timestamp created_at = 6;
}

message UserResponse {
  User user = 1;
}


message GetInfoRequest {
  string Id =1;
}

message Wallet {
  uint64 balance =1;
  string currency =2;
  User user = 3;
  google.protobuf.Timestamp create_at = 4;
  google.protobuf.Timestamp updated_at = 5;

}

message GetInfoRequestId
{
  string Id =1;
}

message GetInfoRequestGmail
{
  string Gmail =1;
}





